--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
+    "@vitest/coverage-v8": "3.2.4",
     "eslint": "^9.5.0",
     "tsup": "^8.1.0",
     "vite": "^5.3.1",
-    "vitest": "^1.6.0"
+    "vitest": "^3.2.4"
   }
 }
