--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "url": "git+https://github.com/ThanatWongsamut/vite-manifest-plugin.git"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@types/node": "^20.14.8",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-v8": "3.2.4",
     "eslint": "^9.5.0",
     "tsup": "^8.1.0",
